; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_mark_file_locked.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_rpc-service.c_seafile_mark_file_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@SEAFILE_DOMAIN = common dso_local global i32 0, align 4
@SEAF_ERR_BAD_ARGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [28 x i8] c"Argument should not be null\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"Invalid path\00", align 1
@seaf = common dso_local global %struct.TYPE_2__* null, align 8
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seafile_mark_file_locked(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  store i8* null, i8** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = icmp ne i8* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %21, label %16

16:                                               ; preds = %13, %3
  %17 = load i32**, i32*** %7, align 8
  %18 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %19 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %20 = call i32 @g_set_error(i32** %17, i32 %18, i32 %19, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %70

21:                                               ; preds = %13
  %22 = load i8*, i8** %6, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 47
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i8*, i8** %6, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %6, align 8
  br label %29

29:                                               ; preds = %26, %21
  %30 = load i8*, i8** %6, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 0
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp eq i32 %33, 0
  br i1 %34, label %35, label %40

35:                                               ; preds = %29
  %36 = load i32**, i32*** %7, align 8
  %37 = load i32, i32* @SEAFILE_DOMAIN, align 4
  %38 = load i32, i32* @SEAF_ERR_BAD_ARGS, align 4
  %39 = call i32 @g_set_error(i32** %36, i32 %37, i32 %38, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %70

40:                                               ; preds = %29
  %41 = load i8*, i8** %6, align 8
  %42 = call i8* @g_strdup(i8* %41)
  store i8* %42, i8** %8, align 8
  %43 = load i8*, i8** %8, align 8
  %44 = call i32 @strlen(i8* %43)
  store i32 %44, i32* %9, align 4
  %45 = load i8*, i8** %8, align 8
  %46 = load i32, i32* %9, align 4
  %47 = sub nsw i32 %46, 1
  %48 = sext i32 %47 to i64
  %49 = getelementptr inbounds i8, i8* %45, i64 %48
  %50 = load i8, i8* %49, align 1
  %51 = sext i8 %50 to i32
  %52 = icmp eq i32 %51, 47
  br i1 %52, label %53, label %59

53:                                               ; preds = %40
  %54 = load i8*, i8** %8, align 8
  %55 = load i32, i32* %9, align 4
  %56 = sub nsw i32 %55, 1
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i8, i8* %54, i64 %57
  store i8 0, i8* %58, align 1
  br label %59

59:                                               ; preds = %53, %40
  %60 = load %struct.TYPE_2__*, %struct.TYPE_2__** @seaf, align 8
  %61 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = load i8*, i8** %5, align 8
  %64 = load i8*, i8** %6, align 8
  %65 = load i32, i32* @FALSE, align 4
  %66 = call i32 @seaf_filelock_manager_mark_file_locked(i32 %62, i8* %63, i8* %64, i32 %65)
  store i32 %66, i32* %10, align 4
  %67 = load i8*, i8** %8, align 8
  %68 = call i32 @g_free(i8* %67)
  %69 = load i32, i32* %10, align 4
  store i32 %69, i32* %4, align 4
  br label %70

70:                                               ; preds = %59, %35, %16
  %71 = load i32, i32* %4, align 4
  ret i32 %71
}

declare dso_local i32 @g_set_error(i32**, i32, i32, i8*) #1

declare dso_local i8* @g_strdup(i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @seaf_filelock_manager_mark_file_locked(i32, i8*, i8*, i32) #1

declare dso_local i32 @g_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
